style.css
/* color palette 
Slate: 1d1d1d
Secondhand Grey: #3f3f3f 
Whitish: #cadcff
Light grey: #dcdcdc
*/

body {
    background-color: #ffffff;
    margin: 0;
    padding: 0;
}

h1 {
    font-family: 'Merriweather', serif;
    font-weight: 1000;
    letter-spacing: 2px;
    text-transform: uppercase;
    font-size: 2.5em;
    color: #ffffff;
    letter-spacing: 3px;
}

h2 {
    font-size: 1.4em;
}

h2 a {
    color: #1d1d1d;
}

h3 {
    font-size: 1em;
}

h4 {
    font-size: 0.8em;
    line-height: 1.6em;
}

h2,
h3,
h4 {
    text-transform: lowercase;
    font-family: 'Quicksand', sans-serif;
    font-weight: 500;
    color: #ffffff;
    letter-spacing: 1px;
}

p {
    font-family: 'Quicksand', sans-serif;
    font-weight: 500;
    color: #1d1d1d;
    letter-spacing: 1px;
}

header {
    min-height: 400px;
    width: 100%;
    display: flex;
    justify-content: center;
    background-color: #1d1d1d;
}

.header-img,
.header-text {
    min-height: auto;
    width: 40%;
    text-align: center;
}

.header-img {
    display: flex;
    justify-content: center;
    align-items: center;
}

.img-container {
    height: 275px;
    width: 275px;
}

.img-container img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    border-radius: 50%;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.458);
}

.header-text {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.top,
.middle,
.bottom {
    margin: 15px;
}

.top {
    line-height: 10px;
    margin-bottom: 5px;
}

.middle {
    max-width: 70%;
    margin: 0 15px;
}

#resume-button {
    height: 60px;
    width: 250px;
    line-height: 7px;
    border: 2px solid #ffffff;
    border-radius: 8px;
    background-color: #1d1d1d;
}

.button-container {
    height: 50px;
    width: 100%;
    background-color: #1d1d1d;
    display: flex;
    justify-content: center;
    align-items: end;
}

.tab {
    margin: 0 10%;
    height: 40px;
    width: 120px;
    border: none;
    border-radius: 8px 8px 0 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #1d1d1d;
    color: #ffffff;
    font-family: 'Merriweather', serif;
    font-size: 1em;
    letter-spacing: 2px;
    text-transform: uppercase;
    font-weight: 1000;
}

.main-block {
    height: auto;
    width: 100%;
    background-color: #ffffff;
    padding: 30px 0 10px 0;
    border-top: 3px solid #ff256e;
}

.projects-content {
    display: flex;
    justify-content: center;
    align-items: top;
    flex-wrap: wrap;
    height: auto;
    margin: 10px 0 50px 0;
}

.projects-content h4 {
    color: #1d1d1d;
}

.tab-active {
    background-color: #ffffff;
    color: #ff256e;
    height: 45px;
    margin-bottom: -3px;
    border: 3px solid #ff256e;
    border-bottom: white;
}

button:hover {
    cursor: pointer;
}

.item {
    min-height: 350px;
    width: 20%;
    margin: 5px 15px;
}

.show-img-container {
    height: auto;
    width: 100%;
}

.show-img-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.project-description {
    height: auto;
}

.project-description h2 {
    color: #1d1d1d;
    margin: 0px 0 20px 0;
    line-height: 30px;
    letter-spacing: 3px;
}

.project-description h4 {
    line-height: 15px;
    margin-top: -5px;
    letter-spacing: 2px;
}

.project-description h2,
.project-description h4 {
    padding: 0 20px 0 20px;
}

.about-content {
    justify-content: center;
    align-items: center;
    display: none;
}

.about-text {
    width: 80%;
    min-height: 500px;
    height: auto;
    text-transform: lowercase;
}

.about-text p {
    padding: 30px 0 60px 0;
}

.socials-content {
    height: auto;
    min-height: 310px;
    display: none;
}

.socials {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin-bottom: 20px;
}

form {
    display: flex;
    flex-direction: column;
    width: 60vw;
}

label, input, textarea {
    margin: 6px 0;
    border-radius: 8px;
}

label {
    margin-bottom: 0;
    text-transform: lowercase;
    font-family: 'Quicksand', sans-serif;
    color: #1d1d1d;
    letter-spacing: 1px;
    font-weight: 500;
}

input, textarea {
    margin-top: 4px;
    padding: 10px;
    border: none;
    background-color: #1d1d1d;
    color: white;
    font-family: 'Quicksand', sans-serif;
    font-weight: 500;
}

#submit {
    width: 30%;
    min-width: 100px;
    margin: 20px auto 5px auto;
    text-transform: lowercase;
    font-family: 'Quicksand', sans-serif;
    color: white;
    letter-spacing: 1px;
    background-color: #1d1d1d;
    transition-duration: 0.2s;
}

#submit:hover {
    background-color: #ff256e;
}

#pink {
    color: #ff256e;
}

footer {
    min-height: 75px;
    width: 100%;
    background-color: #1d1d1d;
    font-family: 'quicksand', sans-serif;
    text-transform: lowercase;
    border-top: 3px solid #ff256e;
}

.footer-content {
    display: flex;
    justify-content: center;
    align-items: flex-end;
}

.footer-container {
    height: 25px;
    margin: 20px 10px;
}

.footer-container h5 {
    line-height: 33px;
    margin: 0;
    padding: 0;
    color: white;
}

.footer-img {
    height: 30px;
    width: 30px;
}


@media all and (min-width: 1100px) {
    .item {
        width: 28%;
    }
 }

@media all and (min-width: 800px) and (max-width: 1100px) {
    .item {
        width: 42%;
    }

    .top {
        font-size: 0.8em;
    }

    .middle {
        max-width: 80%;
    }
 }

@media all and (min-width: 450px) and (max-width: 800px) {
    .item {
        width: 90%;
    }

    .top {
        font-size: 0.8em;
    }

    header {
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .img-container {
        height: 175px;
        width: 175px;
        margin: 50px 0 20px 0;
    }

    .header-text {
        width: 70%;
    }

    .middle {
        max-width: 100%;
        margin: 0;
    }

    #resume-button {
        margin-bottom: 30px;
    }

    .tab {
        margin: 0 8%;
        height: 40px;
        width: 90px;
        font-size: 0.8em;
        letter-spacing: 1px;
    }

    .tab-active {
        background-color: #ffffff;
        color: #ff256e;
        height: 45px;
        margin-bottom: -3px;
        border: 3px solid #ff256e;
        border-bottom: white;
    }
 }

 @media all and (max-width: 450px) {
    
    .item {
        width: 90%;
        min-height: 300px;
    }

    .header-text {
        min-width: 95%;
    }

    .header-img {
        width: 100%;
    }

    .top {
        width: 100%;
    }

    .top h1 {
        font-size: 8vw;
    }

    .top h3 {
        font-size: 4vw;
    }

    .middle h4 {
        font-size: 0.7em;
    }

    header {
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .img-container {
        height: 175px;
        width: 175px;
        margin: 50px 0 20px 0;
    }

    .header-text {
        width: 70%;
    }

    .middle {
        max-width: 90%;
        margin: 0;
    }

    #resume-button {
        margin-bottom: 30px;
        width: 80vw;
        max-width: 250px;
    }
    
    .tab {
        margin: 0 4%;
        height: 40px;
        width: 90px;
        font-size: 0.8em;
        letter-spacing: 1px;
    }

    .tab-active {
        background-color: #ffffff;
        color: #ff256e;
        height: 45px;
        margin-bottom: -3px;
        border: 3px solid #ff256e;
        border-bottom: white;
    }
 }

 

